# tasks-web

./: .env.dev.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  Dockerfile  LICENSE  docker-compose.prod.yml  docker-compose.yml  justfile  manage.py  package-lock.json  package.json  pyproject.toml
assets/css/: main.css
config/: settings.py
config/templates/: base.html
projects/: admin.py  models.py
projects/migrations/: 0001_initial.py
static/css/: main.css
tasks/: admin.py  models.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: index.html
timeblocks/: admin.py  apps.py  models.py  urls.py  views.py
timeblocks/migrations/: 0001_initial.py  0002_rename_notes_timeblock_log.py  0003_alter_timeblock_started_at.py
utils/: fields.py  models.py
